Enhancement | Section | Add position to prevent overlap

--- a/src/components/section/_style.scss
+++ b/src/components/section/_style.scss
@@ -3,6 +3,7 @@
     background-color: $wsu-color--gray-5;
     padding-top: $wsu-spacing--large;
     padding-bottom: $wsu-spacing--medium;
+    position: relative;
 }
 
 .wsu-row + .wsu-section {
